--- a/Login/css/style.css
+++ b/Login/css/style.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 
+}
+body{
+    font-family: 'Open Sans', sans-serif;
 }
 .container{
     display: flex;
@@ -15,9 +20,11 @@
     background-color: #fff;
     border-radius: 15px;
     width: 80%;
-    height: 80%;
+    height: 50%;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    
 
 }
 .content::before{
@@ -26,18 +33,51 @@
     background-color:#9370DB ;
     width: 40%;
     height: 100%;
+    z-index: 1;
 }
 
 .first-content{
     display: flex;
-    position: relative;
 }
+.title{
+    font-size: 28px;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+.title-primary{
+    color: #fff;
 
+}
+.description{
+    font-size: 14px;
+    font-weight: 300;
+    color: #fff;
+    line-height: 30px;
+}
 .first-column{
     text-align: center;
     flex: 1 0 auto;
+    z-index: 10;
 }
 
+.btn{
+    border-radius: 15px;
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 10px;
+    padding: 10px 50px;
+    font-weight: bold;
+}
+
+.btn-primary{
+    background-color: transparent;
+    border: 1px solid white;
+}
+.btn-primary:hover{
+    background-color: #fff;
+    color: #9370DB;
+
+}
 .second-column{
     flex: 2 0 auto;
 }
