--- a/Login/css/style.css
+++ b/Login/css/style.css
@@ -37,13 +37,15 @@ body{
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
 
-    left: 50%;
+    left: 0;
 }
 
 .first-content{
     display: flex;
-    display: none;
+}
 
+.first-content .second-content{
+    z-index: 12;
 }
 .title{
     font-size: 28px;
@@ -75,7 +77,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex: 1 0 auto;
+    width: 50%;
     z-index: 10;
 }
 
@@ -95,6 +97,7 @@ body{
 .btn-primary{
     background-color: transparent;
     border: 1px solid white;
+    transition: background-color 0.5s;
 }
 .btn-primary:hover{
     background-color: #fff;
@@ -105,6 +108,7 @@ body{
 .btn-second{
     background-color: #9370DB;
     border: 1px solid #9370DB;
+    transition: background-color 0.5s;
 }
 
 .btn-second:hover{
@@ -113,10 +117,11 @@ body{
     color: #9370DB;
 }
 .second-column{
-    flex: 2 0 auto;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 10;
 }
 
 .second-content{
@@ -126,22 +131,23 @@ body{
 
 .second-content .first-column{
     order: 2;
+    z-index: -1;
 }
 
 .second-content .second-column{
     order: 1;
+    z-index: -1;
 }
 
 .list-social-midia{
     display: flex;
     list-style-type: none;
-    
-
 }
 
 .social-midia{
     margin: 1rem 0;
 }
+
 .item-social-midia{
     border: 1px solid #bdc3c7;
     border-radius: 50%;
@@ -151,17 +157,19 @@ body{
     text-align: center;
     margin: 5px;
     color: #95a5a6;
+    transition: background-color 0.5s;
 }
+
 .item-social-midia:hover{
     background-color:#9370DB;
     color: #fff;
     border-color: #9370DB;
 }
+
 .form{
     display: flex;
     flex-direction: column;
-    width: 55%;
-    
+    width: 55%;   
 }
 
 .form input{
@@ -169,8 +177,7 @@ body{
     width: 85%;
     border: none;
     background-color: #ecf0f1;
-    margin: 3px;
-    
+    margin: 3px;    
 }
 
 .lable-input{
@@ -195,4 +202,35 @@ body{
 
 .password::first-letter{
     text-transform: capitalize;
+}
+
+.entrar-js .first-content .first-column,
+.entrar-js .first-content .second-column{
+    z-index: -1;
+}
+.entrar-js .second-content .first-column,
+.entrar-js .second-content .second-column{
+    z-index: 12;
+}
+
+.entrar-js .content::before{
+    left: 50%;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.inscrever-js .second-content .first-column,
+.inscrever-js .second-content .second-column{
+    z-index: -1;
+}
+
+.inscrever-js .first-content .first-column,
+.inscrever-js .first-content .second-column{
+    z-index: 12;
+}
+
+.inscrever-js .content::before{
+    left: 0;
 }
