--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,7 @@
 /* ESTILOS DA NAVBAR */
+
 .navbar {
+    width: 100%;
     padding: 0% 0%;
 }
 
@@ -20,7 +22,6 @@
 .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
     background-color: #6959CD;
 }
-
 
 .btn-secondary .bi {
     color: white;
@@ -52,20 +53,248 @@
     margin-top: -0.125rem;
 }
 
-/*STYLES DA SECTION LIVROS RECENTES*/
+/* STYLES DA SECTION LIVROS RECENTES */
 
-.sectionCfg {
-    display: flex;
-    flex-direction: row;
-    padding: 0%;
-    width: 100%;
-    margin: 0.75em 1.5em 0.75em 1.5em;
-    height: 220px;
-    background-color: red;
-    border: 1px solid #09ff00;
+.mainSettings{
+    width: 95%;
+    
 }
-.mainSettings {
-    display: flex;
-    flex-direction: row;
+
+.sectionBooks {
     justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 0.75rem 1.5rem 0.75rem 1.5rem;
+    height: 21.875rem;
+    background-color: rgb(230, 230, 230);
+    border: 0.063rem solid rgb(200, 200, 200);
+    border-radius: 0.625rem;
+    overflow: hidden;
+}
+
+.book-card {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    min-width: 39rem;
+    max-width: 39rem;
+    height: 10.313rem;
+    background-color: white;
+    border: 0.063rem solid rgb(180, 180, 180);
+    border-radius: 0.625rem;
+    margin: 0.313rem 0.313rem 0.313rem 0.313rem;
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.book-card img {
+    width: 9.375rem;
+    height: 100%;
+    object-fit: cover;
+    margin-right: 0.938rem;
+    border-radius: 0.5rem;
+}
+
+.book-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.book-title {
+    font-size: 1.25em;
+    font-weight: bold;
+}
+
+.book-synopsis {
+    flex-grow: 1;
+    margin: 0.625rem 0;
+}
+
+.book-details {
+    font-size: 0.9em;
+    color: #555;
+}
+
+/* ESTILOS DO CARROSSEL */
+
+.sectionCarousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 0.75rem 1.5rem 0.75rem 1.5rem;
+    height: 15rem;
+    background-color: rgb(230, 230, 230);
+    border: 0.063rem solid rgb(200, 200, 200);
+    border-radius: 0.625rem;
+    overflow: hidden;
+}
+
+.carousel-container {
+    width: 95%;
+    height: 15.625rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+
+.carousel-track-container {
+    width: 100%;
+    overflow: hidden;
+}
+
+.carousel-track {
+    display: flex;
+    transition: transform 0.5s ease-in;
+    padding: 0;
+    margin: 0;
+}
+
+.carousel-track li {
+    list-style: none;
+    margin: 0 10px;
+}
+
+.carousel-track img {
+    width: 9.375rem;
+    height: 12.5rem;
+    cursor: pointer;
+    margin: 1.5rem;
+}
+
+.carousel-control {
+    background: none;
+    border: none;
+    font-size: 2rem;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #333;
+}
+
+.carousel-control.prev {
+    left: -3%;
+}
+
+.carousel-control.next {
+    right: -3%;
+}
+
+/* ESTILOS GUIDE DO SITE */
+.sectionGuide {
+    width: 100%;
+    margin: 0.75rem 1.5rem 0.75rem 1.5rem;
+    height: 16.5rem;
+    padding: 1rem;
+    background-color: rgb(230, 230, 230);
+    border: 0.063rem solid rgb(200, 200, 200);
+    border-radius: 0.625rem;
+    overflow: hidden;
+}
+.sectionGuide h3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+/* styles pagina escrever */
+
+.container {
+    border: 1px solid rgb(190, 190, 190);
+	display: flex;
+	flex-direction: column;
+	min-width: 100%;
+	overflow: hidden;
+    padding: 5px;
+}
+
+.toolbar {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background:#9370DB;
+	width: 100%;
+	padding: 1rem 0;
+    border: 2px solid #9370DB;
+}
+
+.head {
+	display: flex;
+	gap: 0.5rem;
+	margin-bottom: 1rem;
+    background: #9370DB;
+}
+
+.head select, .head .color {
+	background: rgb(245, 245, 245);
+	border: 1px solid #ddd;
+	border-radius: 0.25rem;
+	outline: none;
+	cursor: pointer;
+	padding: 0.5rem;
+}
+
+.head .color {
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+	padding: 0 0.6rem;
+}
+
+.head .color input {
+	border: none;
+	width: 1.25rem;
+	height: 1.25rem;
+	background: rgb(245, 245, 245);
+	cursor: pointer;
+}
+
+.btn-toolbar {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 10px;
+	justify-content: center;
+}
+
+.btn-toolbar button {
+	background: rgb(245, 245, 245);
+	border: 2px solid #ddd;
+	border-radius: 6px;
+	cursor: pointer;
+	width: 40px;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 1rem;
+}
+
+.btn-toolbar button:hover {
+	background: #f3f3f3;
+}
+
+#content {
+    background-color: white;
+    border: 2px solid #9370DB;
+	padding: 1rem;
+	outline: none;
+	height: 100vh;
+	overflow: auto;
+}
+
+.custom-option {
+	display: flex;
+	align-items: center;
+}
+
+.custom-option i {
+	margin-right: 5px;
 }
